tests/success/list_binary_op.crema
int foo[] = [1, 2, 3]
int bar = foo[1] + 32
