tests/fail/list_invalid_index.crema
int foo[]
foo[] = 3
foo[3.5] = 1
